--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -1,6 +1,5 @@
 // Misc.
 	$misc: (
-		z-index-base:		10000
 	);
 
 // Duration.
@@ -10,51 +9,64 @@
 
 // Size.
 	$size: (
-		border-radius:		4px,
+		border-radius:		6px,
+		border-width:		1px,
 		element-height:		2.75em,
-		element-margin:		2em,
-		container-width:	60em
+		element-margin:		2em
 	);
 
 // Font.
 	$font: (
-		family:				('Source Sans Pro', Helvetica, sans-serif),
+		family:				(Arial, Helvetica, sans-serif),
 		family-fixed:		('Courier New', monospace),
-		weight:				300,
-		weight-bold:		400
+		weight:				normal,
+		weight-bold:		bold
 	);
 
 // Palette.
 	$palette: (
-		bg:					#fff,
-		fg:					#666,
-		fg-bold:			#555,
-		fg-light: 			#999,
-		border:				rgba(144,144,144,0.5),
+		bg:					#ffffff,
+		fg:					#999999,
+		fg-bold:			#828282,
+		fg-light:			#e0e0e0,
+		border:				#e6e6e6,
 		border-bg:			rgba(144,144,144,0.075),
-		border2:			rgba(144,144,144,0.75),
-		border2-bg:			rgba(144,144,144,0.2),
-		accent1:			#c3e895,
-		accent2:			#8addaa,
-		accent3:			#6bd4c8,
-		accent4:			#57aed3,
-		accent5:			#4a87d3,
-		accent6:			#6b88e6,
-		accent1-alt:		desaturate(darken(#c3e895, 15), 20),
-		accent2-alt:		desaturate(darken(#8addaa, 15), 20),
-		accent3-alt:		desaturate(darken(#6bd4c8, 15), 20),
-		accent4-alt:		desaturate(darken(#57aed3, 15), 20),
-		accent5-alt:		desaturate(darken(#4a87d3, 15), 20),
-		accent6-alt:		desaturate(darken(#6b88e6, 15), 20),
+		border2:			#d6d6d6,
+		border2-bg:			rgba(144,144,144,0.15),
 
-		dark: (
-			bg:				#666666,
+		accent1: (
+			bg:				#4696e5,
+			fg:				mix(#4696e5, #ffffff, 25%),
 			fg-bold:		#ffffff,
-			fg:				rgba(255,255,255,0.75),
-			fg-light:		rgba(255,255,255,0.5),
-			border:			#ffffff,
-			border-bg:		rgba(255,255,255,0.125),
-			border2:		rgba(255,255,255,0.75),
-			border2-bg:		rgba(255,255,255,0.25)
+			fg-light:		mix(#4696e5, #ffffff, 40%),
+			border:			rgba(255,255,255,0.25),
+			border-bg:		rgba(255,255,255,0.075),
+			border2:		rgba(255,255,255,0.5),
+			border2-bg:		rgba(255,255,255,0.2),
+			invert:			true
+		),
+
+		accent2: (
+			bg:				#fbfbfb,
+			fg:				#999999,
+			fg-bold:		#828282,
+			fg-light:		#e0e0e0,
+			border:			#e6e6e6,
+			border-bg:		rgba(144,144,144,0.075),
+			border2:		#d6d6d6,
+			border2-bg:		rgba(144,144,144,0.15),
+			invert:			false
+		),
+
+		accent3: (
+			bg:				#f7f7f7,
+			fg:				#999999,
+			fg-bold:		#828282,
+			fg-light:		#b0b0b0,
+			border:			#d6d6d6,
+			border-bg:		rgba(144,144,144,0.075),
+			border2:		#c6c6c6,
+			border2-bg:		rgba(144,144,144,0.15),
+			invert:			false
 		)
 	);
