--- a/assets/sass/noscript.scss
+++ b/assets/sass/noscript.scss
@@ -6,27 +6,27 @@
 @import 'libs/html-grid';
 
 /*
-	Photon by HTML5 UP
+	Fractal by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
 /* Header */
 
-	body.is-preload {
-		#header {
-			.inner {
+	#header {
+		body.is-preload & {
+			.content {
+				@include vendor('transform', 'none');
+				opacity: 1;
+			}
+
+			.image {
 				@include vendor('transform', 'none');
 				opacity: 1;
 
-				.actions {
-					@include vendor('transform', 'none');
+				img {
 					opacity: 1;
 				}
-			}
-
-			&:after {
-				opacity: 0;
 			}
 		}
 	}
